fixed jump point of sections

--- a/css/main.css
+++ b/css/main.css
@@ -155,7 +155,7 @@
       display: block;
       padding-left: 15px;
   }
-
+ style="transform: translateY(-500%);
 
   .hidden-xs{
       -webkit-transition: all 0.5s ease;
@@ -235,9 +235,10 @@
 
   .section-title{
     padding-left: 1.5em;
-    margin-top: 12em;
+    /*margin-top: 12em;*/
     background-color: #303440;
     color: #ccc;
+    transform: translateY(-23em);
   }
 
   .section-title-tab{
@@ -245,6 +246,7 @@
     background-color: #303440;
     color: #ccc;
     padding-top: 0.5em;
+    transform: translateY(-23em);
   }
 
   .section{
@@ -254,6 +256,7 @@
     margin-top: 0em;
     min-height: 15em;
     background: #eee;
+    transform: translateY(-23em);
   }
 
 
@@ -312,6 +315,26 @@
     margin-left: 1em;
   }
 
+  #uber-mich{
+    margin-top: 10em;
+    /*background-color: yellow;*/
+    height: 50vh;
+  }
+
+  #vita{
+    /*background-color: yellow;*/
+    height: 50vh;
+  }
+
+  #angebote{
+    /*background-color: yellow;*/
+    height: 50vh;
+  }
+
+  #kontakt{
+    /*background-color: yellow;*/
+    height: 50vh;
+  }
 
   #map {
     display: block;
@@ -347,7 +370,7 @@
       padding: 0 30px 0 45px;
     }
     .footer{
-      margin-top: 30em;
+      margin-top: 20em;
     }
   }
   @media (min-width: 992px) {
@@ -387,6 +410,15 @@
     }
     .section-title{
       margin-top: 4em;
+    }
+    .section{
+      transform: translateY(-28em);
+    }
+    .section-title{
+      transform: translateY(-28em);
+    }
+    .section-title-tab{
+      transform: translateY(-28em);
     }
   }
 
